--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "description": "",
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "microdiff": "^1.4.0"
+  }
 }
